falco/Namespace.falco.k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/enforce: privileged
  name: falco
  namespace: falco
