falco/DaemonSet.falco.k8s.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falco
    app.kubernetes.io/version: 0.43.0
    helm.sh/chart: falco-8.0.0
  name: falco
  namespace: falco
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: falco
      app.kubernetes.io/name: falco
  template:
    metadata:
      annotations:
        checksum/certs: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/config: f9c62a298b05f0b8653303f6dd2815622d7ea83534a3834324f86dfc4f404014
        checksum/rules: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        reloader.stakater.com/auto: "true"
      labels:
        app.kubernetes.io/instance: falco
        app.kubernetes.io/name: falco
      name: falco
    spec:
      containers:
        - args:
            - /usr/bin/falco
          image: docker.io/falcosecurity/falco:0.43.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8765
            initialDelaySeconds: 0
            periodSeconds: 15
            timeoutSeconds: 5
          name: falco
          ports:
            - containerPort: 8765
              name: web
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /healthz
              port: 8765
            initialDelaySeconds: 0
            periodSeconds: 15
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 512Mi
          securityContext:
            privileged: true
          startupProbe:
            failureThreshold: 20
            httpGet:
              path: /healthz
              port: 8765
            initialDelaySeconds: 3
            periodSeconds: 5
            timeoutSeconds: 5
          tty: false
          volumeMounts:
            - mountPath: /host/var/run/docker.sock
              name: container-engine-socket-0
            - mountPath: /host/run/podman/podman.sock
              name: container-engine-socket-1
            - mountPath: /host/run/host-containerd/containerd.sock
              name: container-engine-socket-2
            - mountPath: /host/run/containerd/containerd.sock
              name: container-engine-socket-3
            - mountPath: /host/run/crio/crio.sock
              name: container-engine-socket-4
            - mountPath: /host/run/k3s/containerd/containerd.sock
              name: container-engine-socket-5
            - mountPath: /etc/falco
              name: rulesfiles-install-dir
            - mountPath: /usr/share/falco/plugins
              name: plugins-install-dir
            - mountPath: /root/.falco
              name: root-falco-fs
            - mountPath: /host/proc
              name: proc-fs
            - mountPath: /host/etc
              name: etc-fs
              readOnly: true
            - mountPath: /sys/kernel
              name: sys-fs
              readOnly: true
            - mountPath: /etc/falco/falco.yaml
              name: falco-yaml
              subPath: falco.yaml
            - mountPath: /run/falco
              name: grpc-socket-dir
        - args:
            - artifact
            - follow
            - --log-format=json
          image: docker.io/falcosecurity/falcoctl:0.12.2
          imagePullPolicy: IfNotPresent
          name: falcoctl-artifact-follow
          volumeMounts:
            - mountPath: /plugins
              name: plugins-install-dir
            - mountPath: /rulesfiles
              name: rulesfiles-install-dir
            - mountPath: /etc/falcoctl
              name: falcoctl-config-volume
            - mountPath: /artifactstate
              name: artifact-state-dir
      serviceAccountName: falco
      tolerations:
        - operator: Exists
      volumes:
        - hostPath:
            path: /var/run/docker.sock
          name: container-engine-socket-0
        - hostPath:
            path: /run/podman/podman.sock
          name: container-engine-socket-1
        - hostPath:
            path: /run/host-containerd/containerd.sock
          name: container-engine-socket-2
        - hostPath:
            path: /run/containerd/containerd.sock
          name: container-engine-socket-3
        - hostPath:
            path: /run/crio/crio.sock
          name: container-engine-socket-4
        - hostPath:
            path: /run/k3s/containerd/containerd.sock
          name: container-engine-socket-5
        - emptyDir: {}
          name: plugins-install-dir
        - emptyDir: {}
          name: rulesfiles-install-dir
        - emptyDir: {}
          name: artifact-state-dir
        - emptyDir: {}
          name: root-falco-fs
        - hostPath:
            path: /boot
          name: boot-fs
        - hostPath:
            path: /lib/modules
          name: lib-modules
        - hostPath:
            path: /usr
          name: usr-fs
        - hostPath:
            path: /etc
          name: etc-fs
        - hostPath:
            path: /sys/kernel
          name: sys-fs
        - hostPath:
            path: /proc
          name: proc-fs
        - configMap:
            items:
              - key: falcoctl.yaml
                path: falcoctl.yaml
            name: falco-falcoctl
          name: falcoctl-config-volume
        - configMap:
            items:
              - key: falco.yaml
                path: falco.yaml
            name: falco
          name: falco-yaml
        - hostPath:
            path: /run/falco
          name: grpc-socket-dir
  updateStrategy:
    type: RollingUpdate
