falco/Deployment.falco-falcosidekick.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: core
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.31.1
    helm.sh/chart: falcosidekick-0.12.1
  name: falco-falcosidekick
  namespace: falco
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/component: core
      app.kubernetes.io/instance: falco
      app.kubernetes.io/name: falcosidekick
  template:
    metadata:
      annotations:
        checksum/config: 53f324e8b736e6f773f78a4c8dcb9678a6e40fb9ccd97dc42bef66bd73f03342
      labels:
        app.kubernetes.io/component: core
        app.kubernetes.io/instance: falco
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: falcosidekick
        app.kubernetes.io/part-of: falcosidekick
        app.kubernetes.io/version: 2.31.1
        helm.sh/chart: falcosidekick-0.12.1
    spec:
      containers:
        - env:
            - name: DEBUG
              value: "false"
            - name: CUSTOMFIELDS
              value: ""
            - name: TEMPLATEDFIELDS
              value: ""
            - name: CUSTOMTAGS
              value: ""
            - name: OUTPUTFIELDFORMAT
              value: ""
            - name: BRACKETREPLACER
              value: ""
            - name: MUTUALTLSFILESPATH
              value: /etc/certs
            - name: MUTUALTLSCLIENT_CERTFILE
              value: ""
            - name: MUTUALTLSCLIENT_KEYFILE
              value: ""
            - name: MUTUALTLSCLIENT_CACERTFILE
              value: ""
            - name: TLSCLIENT_CACERTFILE
              value: ""
          image: docker.io/falcosecurity/falcosidekick:2.32.0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          name: falcosidekick
          ports:
            - containerPort: 2801
              name: http
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 128Mi
      securityContext:
        fsGroup: 1234
        runAsUser: 1234
      serviceAccountName: falco-falcosidekick
