falco/Pod.falco-falcosidekick-test-connection.k8s.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    helm.sh/hook: test-success
  labels:
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    helm.sh/chart: falcosidekick-0.12.1
  name: falco-falcosidekick-test-connection
  namespace: falco
spec:
  containers:
    - args:
        - -X
        - POST
        - falco-falcosidekick:2801/ping
      command:
        - curl
      image: appropriate/curl
      name: curl
  restartPolicy: Never
