falco/Service.falco-falcosidekick-ui-redis.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.31.1
    helm.sh/chart: falcosidekick-0.12.1
  name: falco-falcosidekick-ui-redis
  namespace: falco
spec:
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app.kubernetes.io/component: ui-redis
    app.kubernetes.io/instance: falco
    app.kubernetes.io/name: falcosidekick
  type: ClusterIP
