falco/Service.falco-falcosidekick-ui.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.31.1
    helm.sh/chart: falcosidekick-0.12.1
  name: falco-falcosidekick-ui
  namespace: falco
spec:
  ports:
    - name: http
      port: 2802
      protocol: TCP
      targetPort: 2802
  selector:
    app.kubernetes.io/component: ui
    app.kubernetes.io/instance: falco
    app.kubernetes.io/name: falcosidekick
  type: ClusterIP
