falco/Service.falco-falcosidekick.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: "true"
  labels:
    app.kubernetes.io/component: core
    app.kubernetes.io/instance: falco
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: falcosidekick
    app.kubernetes.io/part-of: falcosidekick
    app.kubernetes.io/version: 2.31.1
    helm.sh/chart: falcosidekick-0.12.1
  name: falco-falcosidekick
  namespace: falco
spec:
  ports:
    - name: http
      port: 2801
      protocol: TCP
      targetPort: http
    - name: http-notls
      port: 2810
      protocol: TCP
      targetPort: http-notls
  selector:
    app.kubernetes.io/component: core
    app.kubernetes.io/instance: falco
    app.kubernetes.io/name: falcosidekick
  type: ClusterIP
